src/trace/snapshots/asupersync__trace__canonicalize__tests__trace_canonicalize_empty.snap
---
source: src/trace/canonicalize.rs
expression: canonical_trace_snapshot(&[])
---
{
  "depth": 0,
  "len": 0,
  "layers": []
}
